# rustplayground

./: .editorconfig  Cargo.toml  README.md
src/: main.rs  my_utils.rs
src/experiments/: default_args.rs  generics.rs  lazystatic.rs  mod.rs  singleton.rs  smart_pointers.rs
