[package]
name = "helloworld"
version = "0.1.0"
authors = ["Alex <silvercircle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
app_dirs = "1.2.1"
serde_json = "1.0.45"
serde = { version = "1.0.104", features = ["derive"] }
log = "0.4.8"
simplelog = "0.7.4"
rusqlite = "0.21.0"
clap = { version = "2.33.0" }
chrono = "0.4.10"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

